plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.0'
    id 'jacoco'
}

group 'br.com.kafkamanager'
version '1.0-SNAPSHOT'
sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':domain')
    implementation project(':application')
    implementation project(':infrastructure')

    implementation 'org.apache.kafka:kafka-clients:3.0.0'
    implementation 'com.google.code.gson:gson:2.8.9'

    implementation 'org.jacoco:org.jacoco.core:0.8.7'

    implementation 'org.springframework:spring-context:5.3.13'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'

    implementation 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
}

mainClassName = 'br.com.kafkamanager.infrastructure.Main'

run {
    jvmArgs = ['--add-modules', 'java.desktop']
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
}

shadowJar {
    archiveBaseName.set('KafkaManager')
}

jacoco {
    toolVersion = "0.8.7"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

tasks.named('test').configure {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.enabled false
        html.enabled true
    }
}

build.finalizedBy jacocoTestReport